# open-defence-radar

./: .dockerignore  .env.example  .gitignore  2026-06-01_project-defence-signal-engine.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
comms/: linkedin-launch.md
docs/design/: frontend-design.md  prototype.html  system-design.md
docs/process/: versioning-and-release.md
docs/superpowers/plans/: 2026-06-02-agentic-decomposition.md  2026-06-02-final-phases-safe-geospatial.md
docs/superpowers/specs/: 2026-06-01-open-defence-radar-design.md  2026-06-02-agentic-decomposition-design.md  2026-06-02-final-phases-safe-geospatial-design.md
examples/: agent_via_mcp.py
scripts/: ci.sh
src/odr/: __init__.py  cli.py  query.py  types.py
src/odr/agent/: __init__.py  orchestrator.py  planner.py
src/odr/embed/: __init__.py  base.py  factory.py  fake.py  local.py
src/odr/eval/: __init__.py  dataset.py  judge.py  (+3 more)
tests/: test_geo_cli.py  test_query_api.py  test_smoke.py
tests/agent/: test_cli_agent.py  test_orchestrator.py  test_planner.py
tests/embed/: test_embed.py
tests/eval/: test_dataset.py  test_groundedness.py  test_judge.py  test_runner.py  test_scorers.py  test_thresholds.py
tests/geo/: test_regions.py
tests/ingest/: test_chunk.py  test_pipeline.py
tests/mcp_server/: test_server.py
tests/retrieve/: test_fusion.py  test_rerank.py  test_retriever.py
tests/sources/: test_contracts_finder.py  test_find_a_tender.py  test_govuk_news.py  test_ocds_region.py
tests/store/: test_region.py  test_store.py
tests/synthesise/: test_gemini.py  test_openai_compatible.py  test_synthesiser.py
tests/web/: test_app.py  test_e2e.py  test_geo.py  test_trust.py
(+43 files in other folders)
