[project]
name = "open-defence-radar"
version = "0.3.0"
description = "Grounded RAG over open defence-and-security signals, exposed as an MCP tool. Open sources only; analytic, not operational."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "apsw>=3.53.1.0",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "python-dotenv>=1.2.2",
    "sqlite-vec>=0.1.9",
    "typer>=0.12",
]

# License is intentionally unset until the public-release decision (MIT vs Apache-2.0),
# tracked for v1.0.0. See README "License".

[project.scripts]
odr = "odr.cli:main"
odr-mcp = "odr.mcp_server.server:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odr"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PIE"]

[tool.ruff.lint.flake8-bugbear]
# Typer's dependency-injection idiom: calls in argument defaults are intentional.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["sqlite_vec", "apsw", "fastembed"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
